--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <slf4j.version>1.7.12</slf4j.version>
         <logback.version>1.1.3</logback.version>
         <junit.version>4.12</junit.version>
+        <httpclient.version>4.5.3</httpclient.version>
 
     </properties>
 
@@ -41,6 +42,13 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda.time.version}</version>
+        </dependency>
+
+        <!-- http -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
         </dependency>
 
         <!-- log -->
