--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <logback.version>1.1.3</logback.version>
         <junit.version>4.12</junit.version>
         <httpclient.version>4.5.3</httpclient.version>
+        <gson.version>2.8.0</gson.version>
 
     </properties>
 
@@ -42,6 +43,13 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda.time.version}</version>
+        </dependency>
+
+        <!-- gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
         <!-- http -->
